# RotationMeter

./: .gitignore  CMakeLists.txt  README.md  Rotation.ino
src/: Components.cpp  Components.h  Loop.cpp  Message.h  Rotation.h  Setup.cpp  main.cpp
targets/atmega328/: CMakeLists.txt  CMakeLists.txt~
tst/: TestRotationMeter.cpp
